--- a/ben10UA.html
+++ b/ben10UA.html
@@ -51,47 +51,47 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1OByj7hEBP8Dw5-PYQAsFZN8DHw_lgc2m/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 2</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1KJ5kw4FKgIeBRyaZBoQT-N_0DV2aq4jt/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 3</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ZRu9ns7-4uZdxvF8KjCxMJYZsJX9WlUZ/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 4</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1KsA339sCtRWVONbbbkKF1QVUbxFl2uXV/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 5</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1gEWpXRWgszEMqb0iimNYGdtJm1MpgVUa/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 6</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1rH1P7-PIIETjIo7SVRP7ZlSiFl4OZsKZ/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 7</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1LgTmkRsNQZzJecpRr80NmmBYO0bk8d8U/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 8</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1i-ZhUwzW7y14TaYmG1RYRDDgkJN2sCOH/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1rBW5EpRRHzE3q8VDAG7UIM7s_SEJVXdU/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
