--- a/ben10OV.html
+++ b/ben10OV.html
@@ -47,102 +47,102 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/11dNsl5Sx5D-Sptwm7H7F-FKyJmqlC9uU/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1lJ_mMi372aXX8AnlMdhkypbC2fAnwU7D/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 2</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1ci2ph1SMtrm8RSpPhTzHtXGBnNbf_zFM/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 3</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1XSKVr4Vi1Mn6Vyp5i3XsymzAjeA5O0a3/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 4</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1WotPVlRoeklBKvtBGUqIB73uC8j9DU-v/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 5</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1nDXZDIdUQnaExKEnhx2rg4jmX2ol92Kl/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 6</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1XCki748Ul-4cDiX_vxZTvD_4kjBfFhME/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 7</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1FLlx9Jq3lS89jdLGYtPyT5kLdAyWQ10w/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 8</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1NOfyIvgnfZDgYjYLELam5nprZ_jdGfSN/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/19Bco7VNd7-3DQoAaB6ZlCf7MiUUFnMjm/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1Sf_-V59jC4xC8JjQYizEbWYH7ZpctHd9/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1UUye2HV37bQ26i_OjU4-ZOFliYUuH8YW/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1cx28cDTtx56DibVT3tymAn9ih48CBrnB/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1gW2z8tK9OnhqqtlWpUw9B0SkAUnXMIlH/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 14</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1FQmaAAml05OMuKm1EDedTyppSbfDcAvF/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 15</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/13vUxhik6XaBVMkdLW0jin_VvVw6Kpb3a/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 16</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1cSY6ka4DaPaSFi0g14zeAo51i1k1aeh2/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 17</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1iFKojER8yozKwEJGTe6R94xS6ansogQ0/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 18</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1UlnRWMO0X5w4-byCXHu-lMmcoGEQczzl/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 19</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1oqAXCLwivTB4V5eZT8WUrx6V4QehVEiR/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 20</h4>
 		  <p></p>
 		</div>
