--- a/shrek.html
+++ b/shrek.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Evangelion</title>
+<title>Shrek</title>
 <meta content="Shrek" property="og:title" />
 <meta content="Everything Shrek" property="og:description" />
 <meta content="https://metrunui.github.io/shrek.html" property="og:url" />
