--- a/shrek.html
+++ b/shrek.html
@@ -8,7 +8,7 @@
 <meta content="Everything Shrek" property="og:description" />
 <meta content="https://metrunui.github.io/shrek.html" property="og:url" />
 <meta content="https://metrunui.github.io/images/shrek/android.png" property="og:image" />
-<meta content="#CC0000" data-react-helmet="true" name="theme-color" />
+<meta content="#C4D300" data-react-helmet="true" name="theme-color" />
 <link href="styles6.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/shrek/favicon.ico">
 <link rel="apple-touch-icon" href="images/shrek/apple-touch-icon.png">
